fix(ui): define style variables to support light and dark mode

--- a/packages/devtools/src/app/styles/cm.css
+++ b/packages/devtools/src/app/styles/cm.css
@@ -27,6 +27,7 @@ html:not(.dark) {
   --cm-json-property: #698c96;
   --cm-selection-background: #44444410;
   --cm-line-number-gutter: #fafafa50;
+  --cn-line-number-background: #fafafa;
 }
 
 html.dark {
@@ -53,6 +54,7 @@ html.dark {
   --cm-line-highlight-background: #444444;
   --cm-selection-background: #44444450;
   --cm-line-number-gutter: #1a1a1a50;
+  --cn-line-number-background: #141414;
 }
 
 
